<resources>
    <string name="app_name">Koltsegvetes_tervezo</string>
    <string name="title_activity_tranzakcio_hozzaadas">tranzakcio_hozzaadas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Hozzáadás</string>
    <string name="amount">Összeg</string>
    <string name="add_transaction">Tranzakció hozzáadása</string>
    <string name="comment">Megjegyzés</string>
    <string name="edit">Módosítás</string>
    <string name="edit_transaction">Tranzakció módosítása</string>
    <string name="description">Megjegyzés</string>
    <string name="cancel">Mégse</string>
    <string name="categories">Kategóriák</string>
    <string name="settings">Beállítások</string>
    <string name="date">Szűrés dátum szerint</string>
    <string name="valuta">Ft</string>
</resources>