<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:screenOrientation="portrait">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/edit_transaction"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/kategoriaUpdateSpinner"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/alKategoriaUpdateSpinner"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="210dp"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/osszegUpdateEditText"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="290dp"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/valutaSpinner"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginLeft="255dp"
            android:layout_marginTop="290dp" />

        <ImageView
            android:id="@+id/datumUpdateButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="370dp"
            android:src="@drawable/ic_calendar"
            app:backgroundTint="@color/turkiz1" />

        <TextView
            android:id="@+id/datumUpdateTextView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="385dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/megjegyzesUpdateEditText"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"
            android:hint="@string/description"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="20dp" />

        <Button
            android:id="@+id/hozzaadButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="1200dp"
            android:layout_marginEnd="200dp"
            android:onClick="edit"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textSize="20dp"
            android:background="@drawable/bordered_button"/>

        <Button
            android:id="@+id/addCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="242dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="50dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="20dp"
            android:background="@drawable/bordered_button"/>

    </RelativeLayout>

</ScrollView>