<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="Megtakarítási cél meghatározása"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/megnevezesEditText"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="170dp"
            android:hint="Megnevezés"
            android:textColor="@color/white"
            android:textColorHint="@color/gray3"
            android:textSize="20dp" />

        <Button
            android:id="@+id/datumButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="250dp"
            app:backgroundTint="@color/turkiz1"
            app:icon="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/datumTextView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="260dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/megtakaritasOsszegEditText"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="340dp"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/gray3"
            android:textSize="20dp" />

        <Button
            android:id="@+id/hozzaadButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="1200dp"
            android:layout_marginEnd="200dp"
            android:text="@string/add"
            android:textAlignment="center"
            android:textSize="20dp" />

        <Button
            android:id="@+id/addCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="242dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="50dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="20dp" />

    </RelativeLayout>

</ScrollView>