<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.TranzakcioAddFragment">

        <Button
            android:id="@+id/tranzakcioAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="600dp"
            android:text="@string/add"
            app:backgroundTint="@color/turkiz2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.805"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/osszegEditText"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hozzaadTextView"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/datumButton"
            android:layout_width="56dp"
            android:layout_height="60dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="370dp"
            app:backgroundTint="@color/turkiz1"
            app:icon="@drawable/ic_date"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/megjegyzesEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/osszegEditText"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/hozzaadTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/add_transaction"
            android:textAlignment="center"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/megjegyzesEditText"
            android:layout_width="280dp"
            android:layout_height="54dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"
            android:ems="10"
            android:hint="@string/comment"
            android:inputType="text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tranzakcioAddButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/datumTextView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="370dp"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/megjegyzesEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toEndOf="@+id/datumButton"
            app:layout_constraintTop_toBottomOf="@+id/osszegEditText"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/kategoriaSpinner"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:backgroundTint="#FF303030"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/alKategoriSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hozzaadTextView"
            app:layout_constraintVertical_bias="0.647" />

        <Spinner
            android:id="@+id/alKategoriSpinner"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF303030"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/osszegEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</ScrollView>